setup whole app using sequelize, pg, apidoc and made crud api with authorization and authetication

--- a/development.env
+++ b/development.env
@@ -4,4 +4,4 @@ JWT_SECRET=xDPmbc5sd4as5d4s544S6as545s465ad
 POSTGRES_HOST=localhost
 POSTGRES_USER=rv
 POSTGRES_PASSWORD=qwe
-POSTGRES_DB=fitness_app
+POSTGRES_DB=fitness_app_dev
