--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
   "parser": "babel-eslint",
-  "extends": ["standard"],
+  "extends": ["airbnb"],
   "env": {
     "jest": true,
     "jasmine": true
