--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prod": "cross-env NODE_ENV=production nodemon -i \"*.test.js\" -r dotenv-safe/config .",
     "lint": "eslint src",
     "docs": "apidoc -i src -o docs && apidoc-markdown -p docs -o DOCS.md",
-    "postdocs": "open-cli docs/index.html"
+    "postdocs": "open-cli docs/index.html",
+    "prepare": "husky install"
   },
   "jest": {
     "testEnvironment": "node",
@@ -36,9 +37,8 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.1.0",
     "cross-env": "^7.0.2",
-    "dotenv-safe": "^8.2.0",
     "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.0",
@@ -62,8 +62,10 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "express-force-ssl": "^0.3.2",
+    "husky": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
