--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.0",
     "eslint-plugin-standard": "^4.0.1",
+    "husky": "^6.0.0",
     "jest-cli": "^25.1.0",
     "nock": "^12.0.2",
     "nodemon": "^2.0.2",
     "open-cli": "^6.0.0",
+    "pretty-quick": "^3.1.0",
     "sinon": "^4.0.1",
     "supertest": "^4.0.2"
   },
@@ -65,7 +67,6 @@
     "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "express-force-ssl": "^0.3.2",
-    "husky": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
@@ -74,6 +75,12 @@
     "passport-jwt": "^4.0.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
+    "prettier": "^2.2.1",
     "sequelize": "^6.6.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
