--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "prod": "cross-env NODE_ENV=production nodemon -i \"*.test.js\" -r dotenv-safe/config .",
     "lint": "eslint src",
     "docs": "apidoc -i src -o docs && apidoc-markdown -p docs -o DOCS.md",
-    "postdocs": "open-cli docs/index.html",
-    "prepare": "husky install"
+    "postdocs": "open-cli docs/index.html"
   },
   "jest": {
     "testEnvironment": "node",
@@ -48,7 +47,6 @@
     "nock": "^12.0.2",
     "nodemon": "^2.0.2",
     "open-cli": "^6.0.0",
-    "pretty-quick": "^3.1.0",
     "sinon": "^4.0.1",
     "supertest": "^4.0.2"
   },
@@ -75,12 +73,6 @@
     "passport-jwt": "^4.0.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
-    "prettier": "^2.2.1",
     "sequelize": "^6.6.2"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
   }
 }
