--- a/development.env
+++ b/development.env
@@ -1,7 +1,4 @@
 NODE_ENV=development
 MASTER_KEY=sa68d4asda5d5aASd5a4sd65asad5465
 JWT_SECRET=xDPmbc5sd4as5d4s544S6as545s465ad
-POSTGRES_HOST=localhost
-POSTGRES_USER=rv
-POSTGRES_PASSWORD=qwe
-POSTGRES_DB=fitness_app_dev
+DATABASE_URI=postgres://rv:asd@localhost:5432/fitness_app_dev
