--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "nock": "^12.0.2",
     "nodemon": "^2.0.2",
     "open-cli": "^6.0.0",
+    "sequelize-cli": "^6.2.0",
     "sinon": "^4.0.1",
     "supertest": "^4.0.2"
   },
