--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "nock": "^12.0.2",
     "nodemon": "^2.0.2",
     "open-cli": "^6.0.0",
-    "sequelize-cli": "^6.2.0",
     "sinon": "^4.0.1",
     "supertest": "^4.0.2"
   },
@@ -68,6 +67,7 @@
     "express-force-ssl": "^0.3.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "mysql2": "^2.2.5",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
